# web_scrapper_chat_bot

./: .env.example  .gitignore  Questions.md  README.md  Readme_Documento_Final.md  Readme_Modulo2_Informe.md  Readme_Questions.md  Readme_System_Prompt.md  app.py  main.py  master_context.txt  master_context_clean.txt  master_context_text.txt  master_context_text_extra_large.txt  master_context_text_large.txt  pyproject.toml  run_app.py  run_batch.py  run_batch_ux.py  run_rag.py  run_streamlit.py  test_location.py  test_ollama.py  test_rag.py
.streamlit/: config.toml
data/documents/: basic_information.json
src/: preprocess.py
src/app/: web_scrapper.py
src/config/: params.yaml  prompts.yaml
src/context/: agent_context.py
src/graph_solution/: graph_factory.py  state.py
src/interface/: app_streamlit.py  app_streamlit_new.py
src/rag/: custom_quadrant_vector_store.py  data_ingestion.py  generic_rag.py  rag_solution.py
src/web_scraper/: web_scrapper.py
